--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev:client": "yarn --cwd frontend start",
     "dev:server": "yarn --cwd backend dev",
     "dev": "concurrently \"yarn dev:server\" \"yarn dev:client\"",
-    "db:save": "python3 ./tools/savedb.py",
-    "db:reset": "python3 ./tools/resetdb.py"
+    "db:save": "python ./tools/savedb.py",
+    "db:reset": "python ./tools/resetdb.py"
   },
   "dependencies": {
     "concurrently": "^7.0.0"
