Agregando upload de productos

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
+    "expo-file-system": "^13.1.4",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
@@ -43,6 +45,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.20",
     "yup": "^0.32.11"
