--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "install:client": "yarn --cwd frontend",
     "dev:client": "yarn --cwd frontend start",
     "dev:client:android": "yarn --cwd frontend start --android",
-    "dev:server": "yarn --cwd backend dev",
+    "dev:server": "concurrently \"yarn --cwd backend dev\" \"node ./tools/connectNGROK.js\"",
     "dev": "concurrently \"yarn dev:server\" \"yarn dev:client\"",
     "dev:android": "concurrently \"yarn dev:server\" \"yarn dev:client:android\"",
     "db:save": "python ./tools/savedb.py",
     "db:reset": "python ./tools/resetdb.py"
   },
   "dependencies": {
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.0.0",
+    "ngrok": "^4.3.1"
   }
 }
