--- a/backend/api/product/models/product.settings.json
+++ b/backend/api/product/models/product.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "Product"
+    "name": "Product",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -31,6 +32,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "category": {
+      "model": "category"
     }
   }
 }
