--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-numeric-input": "^1.9.1",
     "react-native-reanimated": "~2.3.1",
