--- a/frontend/config.json
+++ b/frontend/config.json
@@ -1,3 +1,3 @@
 {
-  "baseUrl": "https://c67b-2806-1000-8200-5121-7d18-24a6-257f-dd10.ngrok.io"
+  "baseUrl": "https://7f79-189-215-159-153.ngrok.io"
 }
