--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^5.x",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
@@ -45,9 +45,11 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-shared-element": "^0.8.4",
     "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
+    "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.34.20",
     "yup": "^0.32.11"
   },
