--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.x",
-    "@react-navigation/stack": "^5.x",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
@@ -46,10 +46,10 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shared-element": "0.8.3",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
-    "react-navigation-shared-element": "^3.1.3",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-query": "^3.34.20",
     "yup": "^0.32.11"
   },
