--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,15 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.x",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-bottom-tabs": "^5.x",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
+    "@types/react-native-drawer": "^2.5.5",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
@@ -34,20 +39,26 @@
     "expo-web-browser": "~10.1.0",
     "firebase": "^9.6.11",
     "formik": "^2.2.9",
+    "lottie-react-native": "^5.0.1",
     "moti": "^0.17.1",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-loader": "^0.0.9",
+    "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keychain": "^8.0.0",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shared-element": "0.8.3",
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-query": "^3.34.20",
