Cargando productos y categorias del backend

--- a/backend/api/product/models/product.settings.json
+++ b/backend/api/product/models/product.settings.json
@@ -35,6 +35,14 @@
     },
     "category": {
       "model": "category"
+    },
+    "from": {
+      "type": "enumeration",
+      "enum": [
+        "DVolada",
+        "Cafeteria",
+        "Honey"
+      ]
     }
   }
 }
