Agregando hermes y mejorando velocidad

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -26,6 +26,7 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "jsEngine": "hermes",
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
