--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "expo-file-system": "^13.1.4",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
