--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/native-stack": "5.x",
     "@react-navigation/stack": "^5.1.1",
+    "@types/qs": "^6.9.7",
     "@types/react-native-drawer": "^2.5.5",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
@@ -44,6 +45,7 @@
     "lottie-react-native": "^5.0.1",
     "moti": "^0.17.1",
     "native-base": "^3.3.10",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
