Agregando editar producto

--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -61,6 +61,14 @@
     },
     "name": {
       "type": "string"
+    },
+    "cafeteria": {
+      "type": "enumeration",
+      "enum": [
+        "Honey",
+        "DVolada",
+        "Cafeteria"
+      ]
     }
   }
 }
