--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-action-button": "^2.8.5",
     "react-native-animated-loader": "^0.0.9",
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "~2.1.0",
