--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/qs": "^6.9.7",
     "@types/react-native-drawer": "^2.5.5",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -62,6 +63,7 @@
     "react-native-shared-element": "0.8.3",
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.5",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^5.0.0-alpha1",
