--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/qs": "^6.9.7",
     "@types/react-native-drawer": "^2.5.5",
     "axios": "^0.26.1",
+    "bson-objectid": "^2.0.3",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
@@ -37,6 +38,8 @@
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
@@ -68,6 +71,7 @@
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-query": "^3.34.20",
+    "socket.io-client": "^4.5.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
