--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "install:client": "yarn --cwd frontend",
     "dev:client": "yarn --cwd frontend start",
     "dev:client:android": "yarn --cwd frontend start --android",
-    "dev:server": "concurrently \"yarn --cwd backend dev\" \"node ./tools/connectNGROK.js\"",
+    "dev:client:android:ngrok": "set ENV=ngrok && yarn --cwd frontend start --android",
+    "dev:server": "node ./tools/baseUrl.js && yarn --cwd backend dev",
+    "dev:server:ngrok": "concurrently \"yarn --cwd backend dev\" \"node ./tools/connectNGROK.js\"",
     "dev": "concurrently \"yarn dev:server\" \"yarn dev:client\"",
     "dev:android": "concurrently \"yarn dev:server\" \"yarn dev:client:android\"",
+    "dev:android:ngrok": "concurrently \"yarn dev:server:ngrok\" \"yarn dev:client:android:ngrok\"",
     "db:save": "python ./tools/savedb.py",
     "db:reset": "python ./tools/resetdb.py"
   },
