--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "backend": "^0.0.0",
+    "socket.io": "^4.5.0",
     "strapi": "3.6.9",
     "strapi-admin": "3.6.9",
     "strapi-connector-mongoose": "3.6.9",
