--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "react-native-animated-loader": "^0.0.9",
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-blur-loading": "^1.1.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.0.0",
     "react-native-numeric-input": "^1.9.1",
