--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install:server
+          npm run install:server
           npm run build:server --if-present
           npm run test --if-present
 
