--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -11,6 +11,10 @@ on:
 
 jobs:
   build:
+    defaults:
+      run:
+        working-directory: backend
+
     runs-on: ubuntu-latest
 
     steps:
@@ -23,12 +27,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm run install:server
-          npm run build:server --if-present
+          npm run install
+          npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./backend/* -r
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
