--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm run install
-          npm run build --if-present
+          npm run install:server
+          npm run build:server --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
