--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     defaults:
       run:
-        working-directory: backend
+        working-directory: ./backend
 
     runs-on: ubuntu-latest
 
@@ -27,8 +27,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm run install:server
-          npm run build:server --if-present
+          pwd
+          npm run install
+          npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
