--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -28,7 +28,8 @@ jobs:
       - name: npm install, build, and test
         run: |
           pwd
-          npm run install
+          ll
+          npm install
           npm run build --if-present
           npm run test --if-present
 
