--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -34,13 +34,14 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
+        run: pwd
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: ./backend/release.zip
 
   deploy:
     runs-on: ubuntu-latest
