--- a/.github/workflows/main_cetys-one.yml
+++ b/.github/workflows/main_cetys-one.yml
@@ -34,8 +34,10 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: pwd
-        run: zip release.zip ./* -r
+        run: |
+          zip release.zip ./* -r
+          pwd
+          ls
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
